--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         android:theme="@style/AppTheme"
         android:windowSoftInputMode="adjustResize">
         <activity
-            android:name="kr.co.imcloud.app.aichat.SetIPActivity"
+            android:name="kr.co.imcloud.app.aichat.SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,15 +41,15 @@
             android:label="@string/title_activity_network_dialog"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
+            android:name="kr.co.imcloud.app.aichat.ui.chat.ImageActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name="kr.co.imcloud.app.aichat.ui.chat.ChatActivity"
             android:screenOrientation="portrait"
             android:configChanges="keyboardHidden"
             android:label="@string/title_activity_chat"
             android:theme="@style/AppTheme.NoActionBar" />
 
-        <activity android:name="kr.co.imcloud.app.aichat.SplashActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
 
         <meta-data
             android:name="io.fabric.ApiKey"
